# fbmp

./: README.md  pyproject.toml
fbmp/: browser.py  cli.py  config.py  scraper.py  store.py
skill/: SKILL.md
